--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,9 @@ body {
       span {
         padding: 0 0.5rem;
         cursor: pointer;
+        a{
+          text-decoration: none;
+        }
       }
     }
   }
