--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Gloria+Hallelujah");
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 *,
 *::before,
@@ -25,7 +26,7 @@ body {
   .description {
     width: 40%;
     margin: 300px auto;
-    font-family: "Gloria Hallelujah";
+    font-family: 'Quicksand', sans-serif;
     line-height: 1.5;
     text-align: center;
     letter-spacing: 1px;
@@ -45,9 +46,7 @@ body {
       height: 25%;
     }
     p {
-      font-size: 2rem;
-      font-weight: 700;
-      line-height: 1.5;
+      font-size: 1.7rem;
       color: white;
       @media (max-width: 991px) {
         
@@ -481,4 +480,9 @@ body {
 }
 .toggle.clicked::after {
   transform: translateX(100%);
+}
+.ps{
+  font-family: 'Quicksand', sans-serif;
+  color:white;
+  font-size:1.2rem;
 }
